--- a/style.css
+++ b/style.css
@@ -725,7 +725,7 @@ body {
 
 /* content.less*/
 .background-container {
-  background-image: url(../images/img/open-realm-bg-mobile.jpg);
+  background-image: url(images/img/open-realm-bg-mobile.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center top;
@@ -821,7 +821,7 @@ h3 {
     margin-bottom: 40px;
   }
   .background-container {
-    background-image: url(../images/img/open-realm-bg-desktop.jpg);
+    background-image: url(images/img/open-realm-bg-desktop.jpg);
     background-size: contain;
     background-position: right top;
   }
